<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GB_Calculator"
    android:background="@drawable/secondary_background">


    <TextView
        android:id="@+id/gb_title"
        android:layout_width="336dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/compute"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/compute_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="201dp"
        android:layout_height="64dp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:contentDescription="@string/text_box"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221"
        app:srcCompat="@drawable/text_box" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="70dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/level"
        android:inputType="numberDecimal"
        android:scrollbars="none"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/message"
        android:layout_width="104dp"
        android:layout_height="41sp"
        android:gravity="center"
        android:text="@string/lvl_up"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.478" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/Places"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:text="@string/PLACES" />

            <TextView
                android:id="@+id/Def_reward"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/DEF_REWARD" />

            <TextView
                android:id="@+id/To_secure"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/SAFE_FP" />

            <TextView
                android:id="@+id/Place_value"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/REWARD_VALUE"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="224dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/place_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLACE_1" />

            <TextView
                android:id="@+id/t1x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t1x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t1x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/place_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLACE_2" />

            <TextView
                android:id="@+id/t2x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t2x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t2x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/place_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLACE_3" />

            <TextView
                android:id="@+id/t3x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t3x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t3x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="232dp">

            <TextView
                android:id="@+id/place_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLACE_4" />

            <TextView
                android:id="@+id/t4x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t4x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t4x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/place_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLACE_5" />

            <TextView
                android:id="@+id/t5x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t5x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t5x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="143dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/Level_cost"
        android:layout_width="94dp"
        android:layout_height="37dp"

        android:text="@string/TOTAL"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="143dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/Owner_investment"
        android:layout_width="122dp"
        android:layout_height="39dp"

        android:text="@string/INVESTMENT"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/Level_cost"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/self_donated"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.533" />


</android.support.constraint.ConstraintLayout>