<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.FoECalculator.GvG_Calculator"
    android:background="@drawable/secondary_background"
    >

    <Button
        android:id="@+id/compute2"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/compute_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="323dp"
        android:layout_height="65dp"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:contentDescription="@string/text_box"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/text_box" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="207dp"
        android:layout_height="41sp"
        android:gravity="center"
        android:text="@string/sectors"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/input_sector_number"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_hint"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/sectors_result"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="202dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/sectors_result2"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/output"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/result2"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.559" />

</android.support.constraint.ConstraintLayout>
