<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.FoECalculator.GB_bonus_calculator"
    android:background="@drawable/secondary_background">

    <TextView
        android:id="@+id/alt_output"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:text="@string/quick_bonus_title"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/gb_calculator_input_text"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:gravity="center"
        android:hint="write here"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <Button
        android:id="@+id/gb_calculator_compute"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/compute_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="144dp"
        android:layout_height="63dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/gb_calculator_output_text"
        android:layout_width="128dp"
        android:layout_height="66dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

</android.support.constraint.ConstraintLayout>
